# This file configures the binary wheel distribution

[metadata]
# This includes the license file(s) in the wheel.
# as we wish to include our readme and the most essential bits of documentation in the same place without copying them 
# under the pysys package, include them here too
license_files = LICENSE.txt README.rst CHANGELOG.rst docs/UserGuide.rst docs/BaseTest.rst docs/ProjectConfiguration.rst docs/TestDescriptors.rst

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1
